# otzar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  entrypoint.sh  fly.toml  main.py  manage.py  pyproject.toml  tailwind.config.js
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  deploy.yml
catalog/: admin.py  browse_urls.py  browse_views.py  home_views.py  id_generation.py  language_views.py  models.py  search.py  search_urls.py  search_views.py  urls.py  utils.py  views.py
catalog/migrations/: 0001_initial.py  0002_add_dnb_source_catalog_choice.py  0003_add_cover_url.py
catalog/templatetags/: bidi.py
docs/: administration.md  deployment.md  development.md  user-guide.md
docs/plans/: app-plan.md  extract-from-experiments.md  implementation-plan.md
ingest/: admin.py  authority.py  forms.py  models.py  ocr.py  series_workflow.py  urls.py  views.py
ingest/migrations/: 0001_initial.py  0002_alter_scanresult_status.py
otzar/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
scripts/: pre-commit  setup-hooks.sh
sources/: cache.py  cascade.py  covers.py  marc.py  sru.py  viaf.py
static/css/: tailwind.css
static/js/: barcode-scan.js
static/src/: input.css
templates/: base.html  home.html
templates/registration/: login.html
tests/: test_authority.py  test_bidi.py  test_browse.py  test_cache.py  test_cascade.py  test_covers.py  test_ingest.py  test_isbn.py  test_load_test_data.py  test_marc.py  test_marc_cleanup.py  test_models.py  test_ocr.py  test_review_queue.py  test_search.py  test_search_views.py  test_smoke.py  test_sru.py  test_viaf.py  test_views.py
tests/e2e/: conftest.py  test_auth.py  test_ingest.py  (+5 more)
(+35 files in other folders)
